--- a/Workflow.bib
+++ b/Workflow.bib
@@ -1383,3 +1383,34 @@ pages = {233–245},
 numpages = {13},
 keywords = {variance estimation, spectral analysis, simulation, confidence interval, batch means}
 }
+
+@article{Townes2020,
+  title = {Review of {{Probability Distributions}} for {{Modeling Count Data}}},
+  author = {Townes, F. William},
+  year = {2020},
+  month = jan,
+  abstract = {Count data take on non-negative integer values and are challenging to properly analyze using standard linear-Gaussian methods such as linear regression and principal components analysis. Generalized linear models enable direct modeling of counts in a regression context using distributions such as the Poisson and negative binomial. When counts contain only relative information, multinomial or Dirichlet-multinomial models can be more appropriate. We review some of the fundamental connections between multinomial and count models from probability theory, providing detailed proofs. These relationships are useful for methods development in applications such as topic modeling of text data and genomics.},
+  archivePrefix = {arXiv},
+  eprint = {2001.04343},
+  eprinttype = {arxiv},
+  file = {/home/alan/Zotero/storage/SF6VLUAP/Townes - 2020 - Review of Probability Distributions for Modeling C.pdf},
+  journal = {arXiv:2001.04343 [stat]},
+  keywords = {Statistics - Machine Learning,Statistics - Methodology},
+  language = {en},
+  primaryClass = {stat}
+}
+@article{Svensson2020,
+  title = {Droplet {{scRNA}}-Seq Is Not Zero-Inflated},
+  author = {Svensson, Valentine},
+  year = {2020},
+  month = feb,
+  volume = {38},
+  pages = {147--150},
+  issn = {1087-0156, 1546-1696},
+  doi = {10.1038/s41587-019-0379-5},
+  file = {/home/alan/Zotero/storage/22HLS9S7/Svensson - 2020 - Droplet scRNA-seq is not zero-inflated.pdf},
+  journal = {Nature Biotechnology},
+  language = {en},
+  number = {2}
+}
+
